--- a/Areas/aritmetica.html
+++ b/Areas/aritmetica.html
@@ -49,7 +49,7 @@
 			<a href="aritmetica.html" id="spanish">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
 			</a>
-			<a href="#" id="english">
+			<a href="aritmetica-En.html" id="english">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
 			</a>
 
@@ -68,7 +68,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Valor posicional</h5>
 						<p class="card-text" style="color: white">El valor posicional es el valor que toma un dígito de acuerdo con la posición que ocupa dentro del número (unidades, decenas, centenas…). Es por ello que el cambio de posición de un dígito dentro de un número altera el valor total del mismo.</p>
-						<a href="#" class="btn btn-outline-light">Ir</a>
+						<a href="Aritmetica/valorPosicional.html" class="btn btn-outline-light">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -77,7 +77,7 @@
 				  	<div class="card-body bg-dark border-dark">
 						<h5 class="card-title" style="color: white">Sumas y restas</h5>
 						<p class="card-text" style="color: white">La suma también se llama adición. Las partes de la suma son dos: los sumandos y la suma o total, que es el resultado. Se pueden asociar los sumandos de distinta manera para sumar y la suma o total será la misma. Restar es quitar una cierta cantidad a otra que ya teníamos.</p>
-						<a href="#" class="btn btn-outline-light">Ir</a>
+						<a href="Aritmetica/sumasRestas.html" class="btn btn-outline-light">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -86,7 +86,7 @@
 				  	<div class="card-body bg-dark border-dark">
 						<h5 class="card-title" style="color: white">Multiplicación y división</h5>
 						<p class="card-text" style="color: white">La multiplicación y la división están estrechamente relacionadas ya que la división es la operación inversa de la multiplicación. En la división se busca separar en grupos iguales, mientras que en la multiplicación se busca unir o juntar en grupos iguales.</p>
-						<a href="#" class="btn btn-outline-light">Ir</a>
+						<a href="Aritmetica/multiplicacionDivision.html" class="btn btn-outline-light">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
@@ -95,7 +95,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Números negativos</h5>
 						<p class="card-text" style="color: white">Un número negativo es cualquier número cuyo valor es menor que cero y, por tanto, que los demás números positivos.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Aritmetica/numerosNegativos.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -104,7 +104,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Fracciones</h5>
 						<p class="card-text" style="color: white">Toda fracción es una división y toda división es una fracción. Debido a eso una división se puede convertir en una fracción para ser simplificada. Las fracciones pueden ser representadas como (a÷b) o (a/b) en una operación matemáticas.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Aritmetica/fracciones.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -113,7 +113,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Decimales</h5>
 						<p class="card-text" style="color: white">Los números decimales son los valores que representan números más pequeños que la unidad, cada número decimal tiene una parte entera y una parte decimal, en donde la parte entera se encuentra a la izquierda del punto decimal y la parte decimal a la derecha.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Aritmetica/decimales.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -121,13 +121,13 @@
 			
 			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1005px; left: 12px;" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="file:///C|/Users/Daniel Benavides/Documents/index.html">Inicio</a></li>
+				<li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
 				<li class="breadcrumb-item active" aria-current="page">Aritmética</li>
 			  </ol>
 			</nav>
 
-			<img src="file:///C|/Users/Daniel Benavides/Documents/images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
-			<img src="file:///C|/Users/Daniel Benavides/Documents/images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
+			<img src="../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
+			<img src="../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
 			<div id="footer0" class="bg-dark"/>
 			<div id="footer1" class="bg-dark"/>
 			<div id="footer2" class="bg-dark"/>
