--- a/Areas/geometria.html
+++ b/Areas/geometria.html
@@ -46,10 +46,10 @@
 			  </div>
 			</nav>
 			
-			<a href="../index.html" id="spanish">
+			<a href="geometria.html" id="spanish">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
 			</a>
-			<a href="../index-En.html" id="english">
+			<a href="geometria-En.html" id="english">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
 			</a>
 
