--- a/Areas/calculo.html
+++ b/Areas/calculo.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link  rel="icon"   href="images/icono.png"/>
-		<link rel="stylesheet" href="resources/style-Aritmetica.css">
-		<script src="resources/index.js"></script>
+		<link  rel="icon"   href="../images/icono.png"/>
+		<link rel="stylesheet" href="../resources/css/style-Calculo.css">
+		<script src="../resources/js/index.js"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<title>Matemáticas</title>
 	</head>
@@ -21,7 +21,7 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+					  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link active" aria-current="page" href="aritmetica.html">Aritmética</a>
@@ -46,18 +46,21 @@
 			  </div>
 			</nav>
 			
-			<a href="index.html" id="spanish">
+			<a href="calculo.html" id="spanish">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
 			</a>
-			<a href="index-En.html" id="english">
+			<a href="calculo-En.html" id="english">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
 			</a>
 
 			<section id="section">
-				<h2>Aritmética</h2>
+				<h2>Cálculo</h2>
 				<p>
-					<br>La aritmética es la rama de la matemática cuyo objeto de estudio son los números y las operaciones elementales hechas con ellos: adición, sustracción, multiplicación y división.
-					Al igual que en otras áreas de la Matemática, como el Álgebra o la Geometría, el sentido de la «Aritmética» ha ido evolucionando con el amplio y diversificado desarrollo de las ciencias. Originalmente, la Aritmética se desarrolló de manera formal en la Antigua Grecia, con el refinamiento del rigor matemático y las demostraciones, y su extensión a las distintas disciplinas de las «Ciencias Naturales». En la actualidad, puede referirse a la Aritmética Elemental, enfocada a la enseñanza de la Matemática Básica; también al conjunto que reúne el Cálculo Aritmético y las Operaciones Matemáticas, específicamente, las cuatro Operaciones Básicas aplicadas, ya sea a números (números naturales, números enteros, números fraccionarios y números decimales, etc.) como a entidades matemáticas más abstractas (matrices, operadores, etc.); también a la así llamada alta aritmética, conocida como Teoría de Números.
+					<br>En general el término cálculo hace referencia al resultado correspondiente a la acción de calcular. Calcular, por su parte, 
+					consiste en realizar las operaciones necesarias para prever el resultado de una acción previamente concebida, 
+					o conocer las consecuencias que se pueden derivar de unos datos previamente conocidos.<br>
+					No obstante, el uso más común del término «cálculo» es el lógico-matemático. Desde esta perspectiva, el cálculo consiste en un procedimiento mecánico o algoritmo, 
+					mediante el cual podemos conocer las consecuencias que se derivan de las variables previamente conocidas debidamente formalizadas y simbolizadas.
 				</p>
 				<h3>Temas</h3>
 			</section>
@@ -66,35 +69,35 @@
 			  	<div class="col">
 					<div class="card border-0">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Valor posicional</h5>
-						<p class="card-text" style="color: white">El valor posicional es el valor que toma un dígito de acuerdo con la posición que ocupa dentro del número (unidades, decenas, centenas…). Es por ello que el cambio de posición de un dígito dentro de un número altera el valor total del mismo.</p>
-						<a href="#" class="btn btn-outline-light">Ir</a>
-				  	</div>
-					</div>
-			  	</div>
-			  	<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark">
-						<h5 class="card-title" style="color: white">Sumas y restas</h5>
-						<p class="card-text" style="color: white">La suma también se llama adición. Las partes de la suma son dos: los sumandos y la suma o total, que es el resultado. Se pueden asociar los sumandos de distinta manera para sumar y la suma o total será la misma. Restar es quitar una cierta cantidad a otra que ya teníamos.</p>
-						<a href="#" class="btn btn-outline-light">Ir</a>
-				  	</div>
-					</div>
-			  	</div>
-			  	<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark">
-						<h5 class="card-title" style="color: white">Multiplicación y división</h5>
-						<p class="card-text" style="color: white">La multiplicación y la división están estrechamente relacionadas ya que la división es la operación inversa de la multiplicación. En la división se busca separar en grupos iguales, mientras que en la multiplicación se busca unir o juntar en grupos iguales.</p>
-						<a href="#" class="btn btn-outline-light">Ir</a>
+						<h5 class="card-title" style="color: white">Límites y continuidad</h5>
+						<p class="card-text" style="color: white">Un límite es la clave de toque que formaliza la noción intuitiva de aproximación hacia un punto concreto de una sucesión o una función, a medida que los parámetros de esa sucesión o función se acercan a un determinado valor.</p>
+						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 			  	</div>
 			  	<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Números negativos</h5>
-						<p class="card-text" style="color: white">Un número negativo es cualquier número cuyo valor es menor que cero y, por tanto, que los demás números positivos.</p>
+						<h5 class="card-title" style="color: white">Calcular derivadas</h5>
+						<p class="card-text" style="color: white">La derivada de una función es la razón de cambio instantánea con la que varía el valor de dicha función matemática, según se modifique el valor de su variable independiente.</p>
+						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+				  	</div>
+					</div>
+			  	</div>
+			  	<div class="col">
+					<div class="card">
+				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
+						<h5 class="card-title" style="color: white">Aplicaciones de la derivada</h5>
+						<p class="card-text" style="color: white">La derivada de una función es la razón de cambio instantánea con la que varía el valor de dicha función matemática, según se modifique el valor de su variable independiente.</p>
+						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+				  	</div>
+					</div>
+			  	</div>
+			  	<div class="col">
+					<div class="card">
+				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
+						<h5 class="card-title" style="color: white">Integración</h5>
+						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
 						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
@@ -102,8 +105,8 @@
 				<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Fracciones</h5>
-						<p class="card-text" style="color: white">Toda fracción es una división y toda división es una fracción. Debido a eso una división se puede convertir en una fracción para ser simplificada. Las fracciones pueden ser representadas como (a÷b) o (a/b) en una operación matemáticas.</p>
+						<h5 class="card-title" style="color: white">Métodos de integración</h5>
+						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
 						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
@@ -111,23 +114,32 @@
 				<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Decimales</h5>
-						<p class="card-text" style="color: white">Los números decimales son los valores que representan números más pequeños que la unidad, cada número decimal tiene una parte entera y una parte decimal, en donde la parte entera se encuentra a la izquierda del punto decimal y la parte decimal a la derecha.</p>
+						<h5 class="card-title" style="color: white">Aplicaciones de la integral</h5>
+						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
+						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+				  	</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card">
+				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
+						<h5 class="card-title" style="color: white">Series</h5>
+						<p class="card-text" style="color: white">Una serie es la generalización de la noción de suma, aplicada a los infinitos términos de una sucesión.</p>
 						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
 			</div>
 			
-			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1005px; left: 12px;" aria-label="breadcrumb">
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 975px; left: 12px;" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Aritmética</li>
+				<li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Cálculo</li>
 			  </ol>
 			</nav>
 
-			<img src="images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
-			<img src="images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
+			<img src="../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
+			<img src="../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
 			<div id="footer0" class="bg-dark"/>
 			<div id="footer1" class="bg-dark"/>
 			<div id="footer2" class="bg-dark"/>
