--- a/Areas/Aritmetica/valor-posicional.html
+++ b/Areas/Aritmetica/valor-posicional.html
@@ -1,10 +1,80 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Documento sin título</title>
-</head>
+	<head>
+		<meta charset="utf-8">
+		<link  rel="icon"   href="../../images/icono.png"/>
+		<link rel="stylesheet" href="../../resources/css/style-Valor-posicional.css">
+		<script src="../../resources/js/index.js"></script>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<title>Matemáticas</title>
+	</head>
 
-<body>
-</body>
+	<body id="body" class="">
+		<div id="content" class="mt-4">
+			<header id="header" class="bg-dark">
+				<p/>
+				<h1 class="text-center">MATEMÁTICAS</h1>
+			</header>
+			
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nav-main">
+			  <div class="container-fluid">
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <ul class="navbar-nav">
+					<li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="aritmetica.html">Aritmética</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="algebra.html">Álgebra</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="geometria.html">Geometría</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="calculo.html">Cálculo</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="estadistica.html">Estadística</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="trigonometria.html">Trigonometría</a>
+					</li>
+				  </ul>
+				</div>
+			  </div>
+			</nav>
+			
+			<a href="aritmetica.html" id="spanish">
+				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
+			</a>
+			<a href="aritmetica-En.html" id="english">
+				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
+			</a>
+
+			<section id="section">
+				<h2>Valor Posicional</h2>
+				<p>
+					<br>En un número natural, el dígito más a la derecha está siempre en el lugar de las unidades. 
+                    El siguiente más a la derecha está en el lugar de las decenas. Los dígitos restantes continúan 
+                    llenando los valores posicionales hasta que ya no quedan dígitos.
+				</p>
+			</section>
+			
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1005px; left: 12px;" aria-label="breadcrumb">
+			  <ol class="breadcrumb">
+				<li class="breadcrumb-item"><a href="../../index.html">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="../aritmetica.html">Aritmética</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Valor Posicional</li>
+			  </ol>
+			</nav>
+
+			<img src="../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
+			<img src="../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
+			<div id="footer0" class="bg-dark"/>
+			<div id="footer1" class="bg-dark"/>
+			<div id="footer2" class="bg-dark"/>
+		</div>
+	</body>
 </html>
