--- a/Areas/estadistica.html
+++ b/Areas/estadistica.html
@@ -46,18 +46,17 @@
 			  </div>
 			</nav>
 			
-			<a href="index.html" id="spanish">
+			<a href="estadistica.html" id="spanish">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
 			</a>
-			<a href="index-En.html" id="english">
+			<a href="estadistica-En.html" id="english">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
 			</a>
 
 			<section id="section">
-				<h2>Aritmética</h2>
+				<h2>Estadística</h2>
 				<p>
-					<br>La aritmética es la rama de la matemática cuyo objeto de estudio son los números y las operaciones elementales hechas con ellos: adición, sustracción, multiplicación y división.
-					Al igual que en otras áreas de la Matemática, como el Álgebra o la Geometría, el sentido de la «Aritmética» ha ido evolucionando con el amplio y diversificado desarrollo de las ciencias. Originalmente, la Aritmética se desarrolló de manera formal en la Antigua Grecia, con el refinamiento del rigor matemático y las demostraciones, y su extensión a las distintas disciplinas de las «Ciencias Naturales». En la actualidad, puede referirse a la Aritmética Elemental, enfocada a la enseñanza de la Matemática Básica; también al conjunto que reúne el Cálculo Aritmético y las Operaciones Matemáticas, específicamente, las cuatro Operaciones Básicas aplicadas, ya sea a números (números naturales, números enteros, números fraccionarios y números decimales, etc.) como a entidades matemáticas más abstractas (matrices, operadores, etc.); también a la así llamada alta aritmética, conocida como Teoría de Números.
+					<br>La estadística, es la rama de la matemática que estudia la variabilidad, colección, organización, análisis, interpretación, y presentación de los datos, así como el proceso aleatorio que los genera siguiendo las leyes de la probabilidad.​
 				</p>
 				<h3>Temas</h3>
 			</section>
