--- a/Areas/aritmetica-En.html
+++ b/Areas/aritmetica-En.html
@@ -6,14 +6,14 @@
 		<link rel="stylesheet" href="../resources/css/style-Aritmetica.css">
 		<script src="../resources/js/index.js"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<title>Matemáticas</title>
+		<title>Mathematics</title>
 	</head>
 
 	<body id="body" class="">
 		<div id="content" class="mt-4">
 			<header id="header" class="bg-dark">
 				<p/>
-				<h1 class="text-center">MATEMÁTICAS</h1>
+				<h1 class="text-center">MATHEMATICS</h1>
 			</header>
 			
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nav-main">
@@ -21,25 +21,25 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+					  <a class="nav-link active" aria-current="page" href="../index-En.html">Home</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="aritmetica.html">Aritmética</a>
+					  <a class="nav-link active" aria-current="page" href="aritmetica-En.html">Arithmetic</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="algebra.html">Álgebra</a>
+					  <a class="nav-link active" aria-current="page" href="algebra-En.html">Algebra</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="geometria.html">Geometría</a>
+					  <a class="nav-link active" aria-current="page" href="geometria-En.html">Geometry</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="calculo.html">Cálculo</a>
+					  <a class="nav-link active" aria-current="page" href="calculo-En.html">Calculation</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="estadistica.html">Estadística</a>
+					  <a class="nav-link active" aria-current="page" href="estadistica-En.html">Statistics</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="trigonometria.html">Trigonometría</a>
+					  <a class="nav-link active" aria-current="page" href="trigonometria-En.html">Trigonometry</a>
 					</li>
 				  </ul>
 				</div>
@@ -49,71 +49,71 @@
 			<a href="aritmetica.html" id="spanish">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
 			</a>
-			<a href="#" id="english">
+			<a href="aritmetica-En.html" id="english">
 				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
 			</a>
 
 			<section id="section">
-				<h2>Aritmética</h2>
+				<h2>Arithmetic</h2>
 				<p>
-					<br>La aritmética es la rama de la matemática cuyo objeto de estudio son los números y las operaciones elementales hechas con ellos: adición, sustracción, multiplicación y división.
-					Al igual que en otras áreas de la Matemática, como el Álgebra o la Geometría, el sentido de la «Aritmética» ha ido evolucionando con el amplio y diversificado desarrollo de las ciencias. Originalmente, la Aritmética se desarrolló de manera formal en la Antigua Grecia, con el refinamiento del rigor matemático y las demostraciones, y su extensión a las distintas disciplinas de las «Ciencias Naturales». En la actualidad, puede referirse a la Aritmética Elemental, enfocada a la enseñanza de la Matemática Básica; también al conjunto que reúne el Cálculo Aritmético y las Operaciones Matemáticas, específicamente, las cuatro Operaciones Básicas aplicadas, ya sea a números (números naturales, números enteros, números fraccionarios y números decimales, etc.) como a entidades matemáticas más abstractas (matrices, operadores, etc.); también a la así llamada alta aritmética, conocida como Teoría de Números.
+					<br>Arithmetic is the branch of mathematics whose object of study is numbers and the elementary operations performed with them: addition, subtraction, multiplication and division.
+					As in other areas of Mathematics, such as Algebra or Geometry, the meaning of "Arithmetic" has been evolving with the broad and diversified development of the sciences. Originally, Arithmetic was developed in a formal way in Ancient Greece, with the refinement of mathematical rigor and proofs, and its extension to the different disciplines of the "Natural Sciences". Nowadays, it can refer to Elementary Arithmetic, focused on the teaching of Basic Mathematics; also to the set that gathers Arithmetic Calculus and Mathematical Operations, specifically, the four Basic Operations applied either to numbers (natural numbers, whole numbers, fractional numbers and decimal numbers, etc.) or to more abstract mathematical entities (matrices, operators, etc.); also to the so-called high arithmetic, known as Number Theory.
 				</p>
-				<h3>Temas</h3>
+				<h3>Topics</h3>
 			</section>
 
 			<div class="row row-cols-1 row-cols-md-4 g-4" id="temas">
 			  	<div class="col">
 					<div class="card border-0">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Valor posicional</h5>
-						<p class="card-text" style="color: white">El valor posicional es el valor que toma un dígito de acuerdo con la posición que ocupa dentro del número (unidades, decenas, centenas…). Es por ello que el cambio de posición de un dígito dentro de un número altera el valor total del mismo.</p>
-						<a href="#" class="btn btn-outline-light">Ir</a>
-				  	</div>
-					</div>
-			  	</div>
-			  	<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark">
-						<h5 class="card-title" style="color: white">Sumas y restas</h5>
-						<p class="card-text" style="color: white">La suma también se llama adición. Las partes de la suma son dos: los sumandos y la suma o total, que es el resultado. Se pueden asociar los sumandos de distinta manera para sumar y la suma o total será la misma. Restar es quitar una cierta cantidad a otra que ya teníamos.</p>
-						<a href="#" class="btn btn-outline-light">Ir</a>
-				  	</div>
-					</div>
-			  	</div>
-			  	<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark">
-						<h5 class="card-title" style="color: white">Multiplicación y división</h5>
-						<p class="card-text" style="color: white">La multiplicación y la división están estrechamente relacionadas ya que la división es la operación inversa de la multiplicación. En la división se busca separar en grupos iguales, mientras que en la multiplicación se busca unir o juntar en grupos iguales.</p>
-						<a href="#" class="btn btn-outline-light">Ir</a>
+						<h5 class="card-title" style="color: white">Positional value</h5>
+						<p class="card-text" style="color: white">The positional value is the value that a digit takes according to the position it occupies within the number (units, tens, hundreds...). That is why changing the position of a digit within a number alters the total value of the number.</p>
+						<a href="Aritmetica/valor-posicional.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
 			  	<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Números negativos</h5>
-						<p class="card-text" style="color: white">Un número negativo es cualquier número cuyo valor es menor que cero y, por tanto, que los demás números positivos.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<h5 class="card-title" style="color: white">Addition and subtraction</h5>
+						<p class="card-text" style="color: white">Addition is also called addition. There are two parts to addition: the addends and the sum or total, which is the result. You can associate the addends in different ways to add and the sum or total will be the same.</p>
+						<a href="Aritmetica/sumasRestas.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+				  	</div>
+					</div>
+			  	</div>
+			  	<div class="col">
+					<div class="card">
+				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
+						<h5 class="card-title" style="color: white">Multiplication and division</h5>
+						<p class="card-text" style="color: white">Multiplication and division are closely related since division is the inverse of multiplication. In division we seek to separate into equal groups, while in multiplication we seek to unite or join into equal groups.</p>
+						<a href="Aritmetica/multiplicacionDivision.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
+				  	</div>
+					</div>
+			  	</div>
+			  	<div class="col">
+					<div class="card">
+				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
+						<h5 class="card-title" style="color: white">Negative numbers</h5>
+						<p class="card-text" style="color: white">A negative number is any number whose value is less than zero and, therefore, less than the other positive numbers.</p>
+						<a href="Aritmetica/numerosNegativos.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
 				<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Fracciones</h5>
-						<p class="card-text" style="color: white">Toda fracción es una división y toda división es una fracción. Debido a eso una división se puede convertir en una fracción para ser simplificada. Las fracciones pueden ser representadas como (a÷b) o (a/b) en una operación matemáticas.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<h5 class="card-title" style="color: white">Fractions</h5>
+						<p class="card-text" style="color: white">Every fraction is a division and every division is a fraction. Because of that a division can be converted into a fraction to be simplified. Fractions can be represented as (a÷b) or (a/b) in a mathematical operation.</p>
+						<a href="Aritmetica/fracciones.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
 				<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Decimales</h5>
-						<p class="card-text" style="color: white">Los números decimales son los valores que representan números más pequeños que la unidad, cada número decimal tiene una parte entera y una parte decimal, en donde la parte entera se encuentra a la izquierda del punto decimal y la parte decimal a la derecha.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<h5 class="card-title" style="color: white">Decimals</h5>
+						<p class="card-text" style="color: white">Decimal numbers are values that represent numbers smaller than unity. Each decimal number has a whole number part and a decimal part, where the whole number part is to the left of the decimal point and the decimal part is to the right.</p>
+						<a href="Aritmetica/decimales.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
 					</div>
 				</div>
@@ -121,13 +121,13 @@
 			
 			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1005px; left: 12px;" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="file:///C|/Users/Daniel Benavides/Documents/index.html">Inicio</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Aritmética</li>
+				<li class="breadcrumb-item"><a href="../index-En.html">Home</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Arithmetic</li>
 			  </ol>
 			</nav>
 
-			<img src="file:///C|/Users/Daniel Benavides/Documents/images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
-			<img src="file:///C|/Users/Daniel Benavides/Documents/images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
+			<img src="../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
+			<img src="../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
 			<div id="footer0" class="bg-dark"/>
 			<div id="footer1" class="bg-dark"/>
 			<div id="footer2" class="bg-dark"/>
