--- a/index-En.html
+++ b/index-En.html
@@ -21,25 +21,25 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+					  <a class="nav-link active" aria-current="page" href="index-En.html">Home</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="Areas/aritmetica.html">Arithmetic</a>
+					  <a class="nav-link active" aria-current="page" href="Areas/aritmetica-En.html">Arithmetic</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="Areas/algebra.html">Algebra</a>
+					  <a class="nav-link active" aria-current="page" href="Areas/algebra-En.html">Algebra</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="Areas/geometria.html">Geometry</a>
+					  <a class="nav-link active" aria-current="page" href="Areas/geometria-En.html">Geometry</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="Areas/calculo.html">Calculation</a>
+					  <a class="nav-link active" aria-current="page" href="Areas/calculo-En.html">Calculation</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="Areas/estadistica.html">Statistics</a>
+					  <a class="nav-link active" aria-current="page" href="Areas/estadistica-En.html">Statistics</a>
 					</li>
 					  <li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="Areas/trigonometria.html">Trigonometry</a>
+					  <a class="nav-link active" aria-current="page" href="Areas/trigonometria-En.html">Trigonometry</a>
 					</li>
 				  </ul>
 				</div>
