--- a/Areas/calculo-En.html
+++ b/Areas/calculo-En.html
@@ -54,69 +54,42 @@
 			</a>
 
 			<section id="section">
-				<h2>Cálculo</h2>
+				<h2>Calculation</h2>
 				<p>
-					<br>En general el término cálculo hace referencia al resultado correspondiente a la acción de calcular. Calcular, por su parte, 
-					consiste en realizar las operaciones necesarias para prever el resultado de una acción previamente concebida, 
-					o conocer las consecuencias que se pueden derivar de unos datos previamente conocidos.<br>
-					No obstante, el uso más común del término «cálculo» es el lógico-matemático. Desde esta perspectiva, el cálculo consiste en un procedimiento mecánico o algoritmo, 
-					mediante el cual podemos conocer las consecuencias que se derivan de las variables previamente conocidas debidamente formalizadas y simbolizadas.
+					<br>In general, the term calculation refers to the result corresponding to the action of calculating. Calculate, on the other hand, 
+					consists of performing the necessary operations to foresee the result of a previously conceived action, 
+					or to know the consequences that can be derived from previously known data.<br>
+					However, the most common use of the term "calculus" is the logical-mathematical one. From this perspective, calculus consists of a mechanical procedure or algorithm, 
+					by means of which we can know the consequences derived from previously known variables duly formalized and symbolized.
 				</p>
-				<h3>Temas</h3>
+				<h3>Topics</h3>
 			</section>
 
 			<div class="row row-cols-1 row-cols-md-4 g-4" id="temas">
 			  	<div class="col">
 					<div class="card border-0">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Límites y continuidad</h5>
-						<p class="card-text" style="color: white">Un límite es la clave de toque que formaliza la noción intuitiva de aproximación hacia un punto concreto de una sucesión o una función, a medida que los parámetros de esa sucesión o función se acercan a un determinado valor.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<h5 class="card-title" style="color: white">Limits and continuity</h5>
+						<p class="card-text" style="color: white">A limit is the touch key that formalizes the intuitive notion of approaching a particular point of a sequence or function, as the parameters of that sequence or function approach a certain value.</p>
+						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
 			  	<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Calcular derivadas</h5>
-						<p class="card-text" style="color: white">La derivada de una función es la razón de cambio instantánea con la que varía el valor de dicha función matemática, según se modifique el valor de su variable independiente.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<h5 class="card-title" style="color: white">Derivatives</h5>
+						<p class="card-text" style="color: white">The derivative of a function is the instantaneous rate of change with which the value of that mathematical function varies as the value of its independent variable changes.</p>
+						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 			  	</div>
 			  	<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Aplicaciones de la derivada</h5>
-						<p class="card-text" style="color: white">La derivada de una función es la razón de cambio instantánea con la que varía el valor de dicha función matemática, según se modifique el valor de su variable independiente.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
-				  	</div>
-					</div>
-			  	</div>
-			  	<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Integración</h5>
-						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
-				  	</div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Métodos de integración</h5>
-						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
-				  	</div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Aplicaciones de la integral</h5>
-						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<h5 class="card-title" style="color: white">Integration</h5>
+						<p class="card-text" style="color: white">Integration is a fundamental concept of calculus and mathematical analysis. Basically, an integral is a generalization of the sum of infinitely many, infinitesimally small summands: a continuous sum.</p>
+						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -124,8 +97,8 @@
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Series</h5>
-						<p class="card-text" style="color: white">Una serie es la generalización de la noción de suma, aplicada a los infinitos términos de una sucesión.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<p class="card-text" style="color: white">A series is the generalization of the notion of sum, applied to the infinite terms of a sequence.</p>
+						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
@@ -133,8 +106,8 @@
 			
 			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 975px; left: 12px;" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Cálculo</li>
+				<li class="breadcrumb-item"><a href="../index-En.html">Home</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Calculation</li>
 			  </ol>
 			</nav>
 
