--- a/Areas/aritmetica-En.html
+++ b/Areas/aritmetica-En.html
@@ -64,15 +64,6 @@
 
 			<div class="row row-cols-1 row-cols-md-4 g-4" id="temas">
 			  	<div class="col">
-					<div class="card border-0">
-				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Positional value</h5>
-						<p class="card-text" style="color: white">The positional value is the value that a digit takes according to the position it occupies within the number (units, tens, hundreds...). That is why changing the position of a digit within a number alters the total value of the number.</p>
-						<a href="Aritmetica/valor-posicional.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
-				  	</div>
-					</div>
-			  	</div>
-			  	<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Addition and subtraction</h5>
@@ -113,7 +104,7 @@
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Decimals</h5>
 						<p class="card-text" style="color: white">Decimal numbers are values that represent numbers smaller than unity. Each decimal number has a whole number part and a decimal part, where the whole number part is to the left of the decimal point and the decimal part is to the right.</p>
-						<a href="Aritmetica/decimales.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
+						<a href="Aritmetica/decimales.html" class="btn btn-outline-light" style="position: absolute; top: 208px;">Go</a>
 				  	</div>
 					</div>
 				</div>
