--- a/Areas/calculo.html
+++ b/Areas/calculo.html
@@ -78,16 +78,7 @@
 			  	<div class="col">
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Calcular derivadas</h5>
-						<p class="card-text" style="color: white">La derivada de una función es la razón de cambio instantánea con la que varía el valor de dicha función matemática, según se modifique el valor de su variable independiente.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
-				  	</div>
-					</div>
-			  	</div>
-			  	<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Aplicaciones de la derivada</h5>
+						<h5 class="card-title" style="color: white">Derivadas</h5>
 						<p class="card-text" style="color: white">La derivada de una función es la razón de cambio instantánea con la que varía el valor de dicha función matemática, según se modifique el valor de su variable independiente.</p>
 						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
@@ -97,24 +88,6 @@
 					<div class="card">
 				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
 						<h5 class="card-title" style="color: white">Integración</h5>
-						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
-				  	</div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Métodos de integración</h5>
-						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
-						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
-				  	</div>
-					</div>
-				</div>
-				<div class="col">
-					<div class="card">
-				  	<div class="card-body bg-dark border-dark" style="height: 264px;">
-						<h5 class="card-title" style="color: white">Aplicaciones de la integral</h5>
 						<p class="card-text" style="color: white">La integración es un concepto fundamental del cálculo y del análisis matemático. Básicamente, una integral es una generalización de la suma de infinitos sumandos, infinitesimalmente pequeños: una suma continua.</p>
 						<a href="#" class="btn btn-outline-light" style="position: absolute; top: 208px;">Ir</a>
 				  	</div>
