--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="card text-center bg-dark" style="width: 18rem; position: absolute; left: 446px; top: 710px; color: white;">
 				<img src="images/1024px-Illustration_to_Euclid's_proof_of_the_Pythagorean_theorem.svg.png" width="94px" class="align-self-center mt-2" alt="Geometria">
 				<div class="card-body">
-					<h5 class="card-title">Círculos</h5>
+					<h5 class="card-title">Teorema de Pitágoras</h5>
 					<a href="#" class="btn btn-outline-light">Ir</a>
 				</div>	
 			</div>
