--- a/Areas/Algebra/desigualdades-En.html
+++ b/Areas/Algebra/desigualdades-En.html
@@ -1,10 +1,127 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Documento sin título</title>
-</head>
+	<head>
+		<meta charset="utf-8">
+		<link  rel="icon"   href="../../images/icono.png"/>
+		<link rel="stylesheet" href="../../resources/css/style-desigualdad-en.css">
+		<script src="../../resources/js/index.js"></script>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<title>Math</title>
+	</head>
 
-<body>
-</body>
+	<body id="body" class="">
+		<div id="content" class="mt-4">
+			<header id="header" class="bg-dark">
+				<p/>
+				<h1 class="text-center">MATH</h1>
+			</header>
+			
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nav-main">
+			  <div class="container-fluid">
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <ul class="navbar-nav">
+					<li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="../index.html">beginning</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="aritmetica.html">arithmetic</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="algebra.html">Álgebra</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="geometria.html">geometry</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="calculo.html">calculation</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="estadistica.html">statistics</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="trigonometria.html">Trigonometry</a>
+					</li>
+				  </ul>
+				</div>
+			  </div>
+			</nav>
+			
+			<a href="aritmetica.html" id="spanish">
+				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
+			</a>
+			<a href="aritmetica-En.html" id="english">
+				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
+			</a>
+
+			<section id="section">
+				<h2>inequalities</h2>
+				<p>
+					<br>The mathematical inequality is that proposition that relates two algebraic expressions whose values ​​are different. It is a proposition of relationship between two different elements, either by greater, lesser, greater or equal inequality, or less or equal. Each of the different types of inequality must be expressed with a different sign (> or <, etc.) and will have a different reaction to mathematical operations depending on its nature.
+                    <br>Therefore, if we want to explain what the purpose of this concept is with the least possible number of words, we will say that; The goal of mathematical inequality is to show that two mathematical subjects express different values.
+
+				</p>
+				<h1>History</h1>
+                <p>
+                    <br>According to Halmaghi (2012) in the first mathematical records provided by the
+                    history, the inequalities had only an instrumental character, and when the
+                    circumstances became favourable, evolved into a discipline,
+                    so much so that there are currently specific mathematics journals
+                    devoted to inequalities and their applications (Journal of Inequalities and
+                    Applications and Mathematical Inequalities and Applications, the first volumes of which date from 1997 and 1998).
+                    <br>This author maintains that inequalities were initially used
+                    as tools to solve geometric problems related to lengths, areas and volumes. They were also useful for thinking about algebraic problems and finally found their way into the theory of functions, being applied to
+                    more varied models. This made it possible to interact with various areas of the
+                    mathematics: calculus, statistics, numerical analysis, game theory,
+                    etc.
+                </p>
+                <h1>Signs of Inequality</h1>
+                <br>unequal to:<b>≠</b>
+                <br>Smaller than: <b>(<)</b>
+                <br>less than or equal to: <b>≤</b>
+                <br>Greater than: <b>></b>
+                <br>Greater than or equal:<b>≥</b>
+
+                <p>
+                <p>
+                    <h4>Inequality Example</h4>
+                    <br>An example would be to express: 4x – 2 > 9. We would read it saying that “four times our unknown minus two is greater than nine”. Being the element 4x-2 the element A and 9 the element B. The resolution would show us that (in natural numbers) the inequality is fulfilled if x is equal to or greater than 3 (x≥3).
+                    
+                </p>
+                <p>
+                    <h4>Types of Inequality</h4>
+                    <br><b>Strict inequalities:</b>They are those that do not accept equality between elements. In this way, we will understand as inequalities of this type the "greater than" (>) or "less than" (<).
+                    <br><b>Broad or non-strict inequalities:</b>All those in which it is not specified if one of the elements is greater/less or equal. Therefore, we are talking about “less than or equal to” (≤), or “greater than or equal to” (≥).
+                </p>
+                <p>
+                    <h4>Properties of Inequality</h4>
+                    <br>To operate with inequalities we must know all their properties:
+                    <br>-If the members of the expression are multiplied by the same value, the sign does not change.
+                    <br>of the inequality: 4x – 2 > 9 = 3(4x-2) > 3 9
+                    <br>-If the members of the expression are divided by the same value, the sign of the expression does not change.
+                    <br>inequality: 4x – 2 > 9 = (4x-2)/3 > 9/3
+                    <br>If the members of the expression are added or subtracted by the same value, the value does not change.
+                    <br>inequality sign: 4x – 2 > 9 = 4x-2 -3 > 9 - 3 / 4x – 2 > 9 = 4x-2 +3 > 9+3
+                    <br><b>You should also know those properties in which the inequality does change its meaning:</b>
+                    <br>If the members of the expression are multiplied by a negative value, it does change its meaning: 4x – 2 > 9 = -3(4x-2) < -3 9
+                    <br>If the members of the expression are divided by a negative value, it does change its meaning: 4x – 2 > 9 = (4x-2) / -3 < 9/-3
+                </p>
+                
+			</section>
+			
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1005px; left: 12px;" aria-label="breadcrumb">
+			  <ol class="breadcrumb">
+				<li class="breadcrumb-item"><a href="../../index.html">Beginning</a></li>
+                <li class="breadcrumb-item"><a href="../algebra-En.html"></a>Algebra</li>
+				<li class="breadcrumb-item active" aria-current="page">inequality</li>
+			  </ol>
+			</nav>
+
+			<img src="../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
+			<img src="../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
+			<div id="footer0" class="bg-dark"/>
+			<div id="footer1" class="bg-dark"/>
+			<div id="footer2" class="bg-dark"/>
+		</div>
+	</body>
 </html>
+
