--- a/Areas/Algebra/desigualdades.html
+++ b/Areas/Algebra/desigualdades.html
@@ -1,10 +1,126 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Documento sin título</title>
-</head>
+	<head>
+		<meta charset="utf-8">
+		<link  rel="icon"   href="../../images/icono.png"/>
+		<link rel="stylesheet" href="../../resources/css/style-desigualdades.css">
+		<script src="../../resources/js/index.js"></script>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<title>Matemáticas</title>
+	</head>
 
-<body>
-</body>
+	<body id="body" class="">
+		<div id="content" class="mt-4">
+			<header id="header" class="bg-dark">
+				<p/>
+				<h1 class="text-center">MATEMÁTICAS</h1>
+			</header>
+			
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nav-main">
+			  <div class="container-fluid">
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <ul class="navbar-nav">
+					<li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="aritmetica.html">Aritmética</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="algebra.html">Álgebra</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="geometria.html">Geometría</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="calculo.html">Cálculo</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="estadistica.html">Estadística</a>
+					</li>
+					  <li class="nav-item">
+					  <a class="nav-link active" aria-current="page" href="trigonometria.html">Trigonometría</a>
+					</li>
+				  </ul>
+				</div>
+			  </div>
+			</nav>
+			
+			<a href="aritmetica.html" id="spanish">
+				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/es_co.gif" alt="Español" title="Español" />					
+			</a>
+			<a href="aritmetica-En.html" id="english">
+				<img src="https://s3.amazonaws.com/staticcuc/media/mod_languages/images/en_us.gif" alt="English" title="English" />					
+			</a>
+
+			<section id="section">
+				<h2>Desigualdades</h2>
+				<p>
+					<br>La desigualdad matemática es aquella proposición que relaciona dos expresiones algebraicas cuyos valores son distintos. Se trata de una proposición de relación entre dos elementos diferentes, ya sea por desigualdad mayor, menor, mayor o igual, o bien menor o igual. Cada una de las distintas tipologías de desigualdad debe ser expresada con diferente signo (> o <, etcétera) y tendrá una reacción a operaciones matemáticas diferente según su naturaleza.
+                    <br>Por lo tanto, si queremos explicar cuál es la finalidad de este concepto con el menor número de palabras posibles diremos que; el objetivo de la desigualdad matemática es mostrar que dos sujetos matemáticos expresan valores diferentes.
+
+				</p>
+				<h1>Historia</h1>
+                <p>
+                    <br>Según Halmaghi (2012) en los primeros registros matemáticos que brinda la
+                    historia, las desigualdades tenían sólo un carácter instrumental, y cuando las
+                    circunstancias se convirtieron en favorables, evolucionaron en una disciplina,
+                    tanto es así que en la actualidad existen revistas específicas de matemática
+                    dedicadas a las desigualdades y sus aplicaciones (Journal of Inequalities and
+                    Applications y Mathematical Inequalities and Applications, cuyos primeros volúmenes datan de 1997 y 1998).
+                    <br>Esta autora sostiene que las desigualdades se utilizaron en un comienzo
+                    como herramientas para resolver problemas geométricos vinculados con longitudes, áreas y volúmenes. También fueron útiles para pensar problemas algebraicos y finalmente se instalaron en la teoría de funciones, aplicándose a los
+                    más variados modelos. Esto posibilitó la interacción con diversas áreas de la
+                    matemática: el cálculo, la estadística, el análisis numérico, la teoría de juegos,
+                    etcétera.
+                </p>
+                <h1>Signos de la Desigualdad</h1>
+                <br>Desigual a:<b>≠</b>
+                <br>Menor que: <b>(<)</b>
+                <br>Menor o igual que: <b>≤</b>
+                <br>Mayor que: <b>></b>
+                <br>Mayor o igual que:<b>≥</b>
+
+                <p>
+                <p>
+                    <h4>Ejemplo De Desigualdad</h4>
+                    <br>Un ejemplo sería expresar: 4x – 2 > 9. Lo leeríamos diciendo que “cuatro veces nuestra incógnita menos dos es superior a nueve”. Siendo el elemento 4x-2 el elemento A y 9 el elemento B. La resolución nos mostraría que (en números naturales) la desigualdad se cumple si x es igual o superior a 3 (x≥3).
+                    
+                </p>
+                <p>
+                    <h4>Tipos de Desigualdad</h4>
+                    <br><b>Desigualdades estrictas:</b>Son aquellas que no aceptan la igualdad entre elementos. De este modo, entenderemos como desigualdades de este tipo el “mayor que” (>) o “menor que” (<).
+                    <br><b>Desigualdades amplias o no estrictas:</b>Todas aquellas en las que no se especifica si uno de los elementos es mayor/menor o igual. Por lo tanto, estamos hablando de “menor o igual que” (≤), o bien “mayor o igual que” (≥).
+                </p>
+                <p>
+                    <h4>Propiedades de la Desigualdad</h4>
+                    <br>Para operar con desigualdades debemos conocer todas sus propiedades:
+                    <br>-Si los miembros de la expresión son multiplicados por el mismo valor, no cambia el signo
+                    <br>de la desigualdad: 4x – 2 > 9 = 3(4x-2) > 3·9
+                    <br>-Si los miembros de la expresión son divididos por el mismo valor, no cambia el signo de la
+                    <br>desigualdad: 4x – 2 > 9 = (4x-2)/3 > 9/3
+                    <br>Si los miembros de la expresión son sumados o restados por el mismo valor, no cambia el
+                    <br>signo de la desigualdad: 4x – 2 > 9 = 4x-2 -3 > 9 - 3 / 4x – 2 > 9 = 4x-2 +3 > 9+3
+                    <br><b>También debes saber aquellas propiedades en las que la desigualdad sí que cambia de sentido:</b>
+                    <br>Si los miembros de la expresión son multiplicados por un valor negativo, sí cambia de sentido: 4x – 2 > 9 = -3(4x-2) < -3·9
+                    <br>Si los miembros de la expresión son divididos por un valor negativo, sí cambia de sentido: 4x – 2 > 9 = (4x-2) / -3 < 9/-3
+                </p>
+                
+			</section>
+			
+			<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;); position: absolute; top: 1005px; left: 12px;" aria-label="breadcrumb">
+			  <ol class="breadcrumb">
+				<li class="breadcrumb-item"><a href="../../index.html">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="../algebra.html">Algebra</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Desigualdad</li>
+			  </ol>
+			</nav>
+
+			<img src="../images/cuc.png" id="cucFooter" alt="logo" class="bg-dark">
+			<img src="../images/Departamento.png" id="dptFooter" alt="logo" class="bg-dark">
+			<div id="footer0" class="bg-dark"/>
+			<div id="footer1" class="bg-dark"/>
+			<div id="footer2" class="bg-dark"/>
+		</div>
+	</body>
 </html>
